; ModuleID = '/home/carl/AnghaBench/sqlcipher/src/extr_test_superlock.c_superlockShmLock.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/src/extr_test_superlock.c_superlockShmLock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { %struct.TYPE_5__* }
%struct.TYPE_5__ = type { i32 (%struct.TYPE_6__*, i32, i32, i32)* }

@SQLITE_SHM_LOCK = common dso_local global i32 0, align 4
@SQLITE_SHM_EXCLUSIVE = common dso_local global i32 0, align 4
@SQLITE_BUSY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_6__*, i32, i32, i32*)* @superlockShmLock to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @superlockShmLock(%struct.TYPE_6__* %0, i32 %1, i32 %2, i32* %3) #0 {
  %5 = alloca %struct.TYPE_6__*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32 (%struct.TYPE_6__*, i32, i32, i32)*, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32* %3, i32** %8, align 8
  %11 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %12 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %11, i32 0, i32 0
  %13 = load %struct.TYPE_5__*, %struct.TYPE_5__** %12, align 8
  %14 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %13, i32 0, i32 0
  %15 = load i32 (%struct.TYPE_6__*, i32, i32, i32)*, i32 (%struct.TYPE_6__*, i32, i32, i32)** %14, align 8
  store i32 (%struct.TYPE_6__*, i32, i32, i32)* %15, i32 (%struct.TYPE_6__*, i32, i32, i32)** %10, align 8
  br label %16

16:                                               ; preds = %34, %4
  %17 = load i32 (%struct.TYPE_6__*, i32, i32, i32)*, i32 (%struct.TYPE_6__*, i32, i32, i32)** %10, align 8
  %18 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %19 = load i32, i32* %6, align 4
  %20 = load i32, i32* %7, align 4
  %21 = load i32, i32* @SQLITE_SHM_LOCK, align 4
  %22 = load i32, i32* @SQLITE_SHM_EXCLUSIVE, align 4
  %23 = or i32 %21, %22
  %24 = call i32 %17(%struct.TYPE_6__* %18, i32 %19, i32 %20, i32 %23)
  store i32 %24, i32* %9, align 4
  br label %25

25:                                               ; preds = %16
  %26 = load i32, i32* %9, align 4
  %27 = load i32, i32* @SQLITE_BUSY, align 4
  %28 = icmp eq i32 %26, %27
  br i1 %28, label %29, label %34

29:                                               ; preds = %25
  %30 = load i32*, i32** %8, align 8
  %31 = bitcast i32* %30 to i8*
  %32 = call i64 @superlockBusyHandler(i8* %31, i32 0)
  %33 = icmp ne i64 %32, 0
  br label %34

34:                                               ; preds = %29, %25
  %35 = phi i1 [ false, %25 ], [ %33, %29 ]
  br i1 %35, label %16, label %36

36:                                               ; preds = %34
  %37 = load i32, i32* %9, align 4
  ret i32 %37
}

declare dso_local i64 @superlockBusyHandler(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
